correct link to js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script>index.js</script>
+        <script src="index.js"></script>
         <title>Cosmobot</title>
     </head>
     <body>
