--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="index.js"></script>
+        <script type="module" src="index.js"></script>
         <title>Cosmobot</title>
     </head>
     <body>
