--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
         <title>Cosmobot</title>
     </head>
     <body>
+        <a href="http://www.gracethompson.ca/main.go">Do something</a> 
+        <a href="https://www.pexels.com">Photos provided by Pexels</a>
+        <img src="dude.jpg">
     </body>
 </html>
